--- a/poem.rmd
+++ b/poem.rmd
@@ -38,52 +38,59 @@ All mimsy were the borogoves,
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
 
-I went to turn the grass once after one
+If I should die,
 
 
-Who mowed it in the dew before the sun.
+And you should live,
 
 
-The dew was gone that made his blade so keen
+And time should gurgle on,
 
 
-Before I came to view the levelled scene.
+And morn should beam,
 
 
-I looked for him behind an isle of trees;
+And noon should burn,
 
 
-I listened for his whetstone on the breeze.
+As it has usual done;
 
 
-## Third Verse
-<!--Put the first two verses of The Walrus and the Carpenter here!-->
+If birds should build as early,
 
 
-The sun was shining on the sea,
-   Shining with all his might
-   
-   
-He did his very best to make
-   The billows smooth and bright—
+And bees as bustling go,–
 
 
-## Last Verse
-<!--Put a short poem of your choice 8-20 lines,here!-->
-
-A thing of beauty is a joy for ever:
+One might depart at option
 
 
-Its loveliness increases; it will never
+From enterprise below!
 
 
-Pass into nothingness; but still will keep
+‘Tis sweet to know that stocks will stand
 
 
-A bower quiet for us, and a sleep
+When we with daisies lie,
 
 
-Full of sweet dreams, and health, and quiet breathing.
+That commerce will continue,
 
 
-– John Keats (1)
+And trades as briskly fly.
+
+
+It make the parting tranquil
+
+
+And keeps the soul serene,
+
+
+That gentlemen so sprightly
+
+
+Conduct the pleasing scene!
+
+
+– Emily Dickinson
+
