--- a/poem.rmd
+++ b/poem.rmd
@@ -38,60 +38,52 @@ All mimsy were the borogoves,
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
 
-If I should die,
+I went to turn the grass once after one
 
 
-And you should live,
+Who mowed it in the dew before the sun.
 
 
-And time should gurgle on,
+The dew was gone that made his blade so keen
 
 
-And morn should beam,
+Before I came to view the levelled scene.
 
 
-And noon should burn,
+I looked for him behind an isle of trees;
 
 
-As it has usual done;
+I listened for his whetstone on the breeze.
 
 
-If birds should build as early,
+## Third Verse
+<!--Put the first two verses of The Walrus and the Carpenter here!-->
 
 
-And bees as bustling go,–
+The sun was shining on the sea,
+   Shining with all his might
+   
+   
+He did his very best to make
+   The billows smooth and bright—
 
 
-One might depart at option
+## Last Verse
+<!--Put a short poem of your choice 8-20 lines,here!-->
+
+A thing of beauty is a joy for ever:
 
 
-From enterprise below!
+Its loveliness increases; it will never
 
 
-‘Tis sweet to know that stocks will stand
+Pass into nothingness; but still will keep
 
 
-When we with daisies lie,
+A bower quiet for us, and a sleep
 
 
-That commerce will continue,
+Full of sweet dreams, and health, and quiet breathing.
 
 
-And trades as briskly fly.
-
-
-It make the parting tranquil
-
-
-
-And keeps the soul serene,
-
-
-That gentlemen so sprightly
-
-
-Conduct the pleasing scene!
-
-
-– Emily Dickinson
-
+– John Keats (1)
